--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,87 @@
 @tailwind utilities;
 
 
-.movie-card {
-  width: 30vw
+.movie-item-container {
+  border: 2px solid grey;
+  border-radius: 5px;
+  position: relative;
+  display: flex;
+  margin-left: 60px;
+}
+
+.movie-image {
+  margin-bottom: 60px;
+  width: 100px;
+  margin-left: 30px;
+  border-radius: 5px;
+}
+
+.movie-list-container {
+  width: 80vw;
+  display: flex;
+
 }
 
 .item-list {
   list-style: none;
   display: flex;
-  flex-direction: row;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   gap: 24px;
 }
 
+.navbar {
+  background-color: #d3c440;
+  height: 80px;
+  width: 100%;
+}
+
+.search-box {
+	display: inline-block;
+	vertical-align: middle;
+	background: #FFF;
+	margin-left: 40px;
+	border-radius: 6px;
+	position: relative;
+}
+
+ #topsearch-ac {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    transition: all .5s ease-in-out;
+}
+
+.top-search-form {
+  padding: 2px;
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+}
+
+.top-search-input {
+  height: 30px;
+  font-size: 22px;
+  border: 0;
+  background: #FFF;
+  padding-left: 10px;
+  
+}
+
+.top-search-input:focus {
+  outline: none;
+}
+
+.clear-search {
+  display: inline-block;
+  cursor: pointer;
+  color: #333;
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  right: 10px;
+
+}
