--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,31 @@
   border: 2px solid grey;
   border-radius: 5px;
   position: relative;
-  display: flex;
+  display: inline-flex;
+  flex-direction: row;
   margin-left: 60px;
+  height: 300px;
+  width: 100%;
+}
+
+.movie-image-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 228px;
+  height: 296px;
+  margin-left: 20px;
+  border-radius: 5px;
+  overflow: hidden; 
+  background-color: aliceblue;
 }
 
 .movie-image {
-  margin-bottom: 60px;
-  width: 100px;
-  margin-left: 30px;
+  max-width: 100%;
+  max-height: 100%;
+  height:fit-content;
   border-radius: 5px;
+
 }
 
 .movie-list-container {
