--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,19 @@
 
 
 .movie-item-container {
-  border: 2px solid grey;
-  border-radius: 5px;
   position: relative;
   display: inline-flex;
   flex-direction: row;
-  margin-left: 60px;
-  width: 100%;
+  width: 70%;
   padding: 20px 0px;
+  border-bottom: 1px solid #DDD;
 }
 
 .movie-image-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 228px;
+  width: 199px;
   height: 296px;
   margin-left: 20px;
   border-radius: 5px;
@@ -35,8 +33,9 @@
 }
 
 .movie-list-container {
-  width: 80vw;
   display: flex;
+  flex-flow: column wrap;
+  align-content: center;
 
 }
 
@@ -53,6 +52,27 @@
   display: flex;
   flex-flow: column wrap;
   gap: 24px;
+  align-content: center;
+  width: 60vw;
+  border: 1px solid grey;
+  margin: 20px 0;
+  box-shadow:   0 20px 20px rgba(90, 90, 90, 0.75);
+  min-height: 300px;
+}
+
+.movie-year{
+  background-color: #EDEBEC;
+  padding: 5px 15px;
+  font-weight: bold;
+  width: fit-content
+}
+
+.movie-title{
+  padding: 5px 10px;
+}
+
+.loading-spinner {
+  margin-top: 90px;
 }
 
 .navbar {
