--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@
 }
 
 .movie-list {
+  position: relative;
   list-style: none;
   display: flex;
   flex-flow: column wrap;
@@ -57,7 +58,6 @@
   border: 1px solid grey;
   margin: 20px 0;
   box-shadow:   0 20px 20px rgba(90, 90, 90, 0.75);
-  min-height: 300px;
 }
 
 .movie-year{
@@ -119,4 +119,5 @@
   height: 30px;
   position: absolute;
   right: 10px;
+  top: 10px;
 }
